--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Jorge's Personal Webiste</title>
+        <title>Jorge's Personal Website</title>
     </head>
     <body>
         <table cellspacing="20">
